--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.5",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.5",
+    "@angular/material-moment-adapter": "^14.2.5",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@material-ui/core": "^4.12.4",
+    "angular-sweetalert-2": "^1.0.1",
+    "moment": "^2.29.4",
+    "ng2-currency-mask": "^13.0.3",
+    "ngx-mat-select-search": "^5.0.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -27,12 +36,15 @@
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "autoprefixer": "^10.4.12",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "~4.7.2"
   }
 }
